Completed interface, need to fix bug

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,6 @@
 [client]
-showErrorDetails = false
+showErrorDetails = "none"
 
 [global]
+disableWidgetStateDuplicationWarning = false
 showWarningOnDirectExecution = false
